changes on task 7 for task 9